# Blink

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  run_tests.sh  settings.yaml  test-final-plugin-system.sh  test-settings.yaml
demo-plugin/: Cargo.toml  Makefile  build.sh
demo-plugin/src/: lib.rs
docs/: PLUGINS.md
proptest-regressions/kafka/: storage.txt
src/: lib.rs  main.rs  profiling.rs  settings.rs
src/alloc/: mod.rs
src/kafka/: admin.rs  broker.rs  counters.rs  fetch.rs  metadata.rs  mod.rs  produce.rs  shutdown.rs  storage.rs
src/kafka/groups/: consumer_group.rs  mod.rs
src/plugins/: mod.rs
src/resources/: blink-plugin.wit  logo.txt
src/server/: mod.rs  rest.rs
src/util/: iterators.rs  mod.rs  protocol.rs  toggles.rs
tests/: README.md  consumer_group.rs  deadlock_detection_test.rs  gcp_logging_integration_test.rs  obliteration_integration_test.rs  queue_storage_test.rs  rdkafka_integration_test.rs  record_batch_reconstruction_test.rs  storage_test.proptest-regressions  storage_test.rs  stress_test.rs  tests.rs  throughput_test.rs  wal_integration_test.rs  working_offload_test.rs
tests/common/: mod.rs
tests/configs/: README.md  test_integration_settings.yaml  test_settings.yaml  test_stress_settings.yaml  test_throughput_settings.yaml
tests/offload_tests/: README.md  baseline_test.rs  config_tests.rs  minimal_test.rs  mod.rs  size_limit_test.rs
tests/scripts/: README.md  run_stress_test.sh  run_throughput_test.sh  test_offload_with_blink.sh
