[package]
name = "blink"
version = "0.2.0"
edition = "2021"


[dependencies]
paste = "1.0"
mimalloc = "0.1.1"
kafka-protocol = { version = "0.15.1", features = ["broker", "messages_enums"] }
bytes = "1.4.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.3.4", features = ["v4"] }
tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0.179", features = ["derive"] }
serde_yaml = "0.9.33"
crc32fast = "1.4.2"
hyper = "0.14.28"
warp = "0.3.7"
futures = "0.3"
get_if_addrs = "0.5"
log = "0.4.19"
concurrent-queue = "2.5.0"
chrono = "0.4.38"
serde_json = "1.0.109"
anyhow = "1.0.80"
async-trait = "0.1"
rand = "0.8.5"
prometheus = "0.13.4"
dashmap = "6.1.0"
console-subscriber = "0.4.0"
ctrlc = "3.2"
form_urlencoded = "1.2.1"
once_cell = "1.20.2"
clap = { version = "4.0", features = ["derive"] }
nano-wal = "0.4.0"  # Write-Ahead Log for persistent storage offloadover
wasmtime = "25.0"
wasmtime-wasi = "25.0"
wit-bindgen = "0.33.0"
rdkafka = { version = "0.36", optional = true }
reqwest = { version = "0.12.8", default-features = false, features = [
    "rustls-tls",
    "json",
] }
quantum-pulse = { version = "0.1.6" }
nano-gcp-logging = { version = "0.1.0" }


[dev-dependencies]
reqwest = { version = "0.12.8", default-features = false, features = [
    "rustls-tls",
    "json",
] }
criterion = { version = "0.5", features = ["async_tokio"] }
futures = "0.3"
tempfile = "3.8"
loom = "0.7"
tokio-test = "0.4"
rdkafka = { version = "0.36", features = ["cmake-build"] }
proptest = "1.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[features]
default = []
external-kafka = ["rdkafka"]
stress-test = ["rdkafka"]

loom = []
profiled = ["quantum-pulse/full"]
